# github-react-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
github_react_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py
github_react_agent/tools/: __init__.py  base.py  branch.py  commit.py  file_content.py  file_metadata.py  pull_request.py  pull_request_analyze.py  pull_request_review.py  repo_contents.py  repo_details.py  repo_search.py
tests/: __init__.py  conftest.py  test_tools.py
